app/assets/stylesheets/petitions/admin/_list.scss
.admin {
  .signature-logs {
    margin-bottom: em(24, 16);
  }

  .petition-list {
    margin-bottom: em(24, 16);

    .flagged {
      background-color: $mellow-red-25;
    }

    th, td {
      width: 12.5%;
      text-align: right;
    }

    .action {
      width: 37.5%;
      text-align: left;
      padding-right: $gutter;
    }

    .creator {
      text-align: left;
    }

    .petition-id, .state, .tags {
      text-align: center;
    }

    .date {
      text-align: center;
      white-space: nowrap;
    }
  }

  th:last-child, td:last-child {
    padding-right: 0;
  }

  .petition-emails {
    th:first-child, td:first-child {
      text-align: left;
    }
  }

  .invalidation-list, .language-list {
    th, td {
      text-align: right;
    }

    th:first-child, td:first-child {
      text-align: left;
    }

    th:last-child, td:last-child {
    }
  }

  .signature-list {
    margin-bottom: em(24, 16);

    th, td {
      text-align: left;
      padding: em(12, 16) em(20, 16) em(12, 16) 0;
    }

    th:last-child, td:last-child {
      text-align: right;
      padding-right: 0;
    }

    td:first-child {
      text-align: left;
      white-space: nowrap;
    }

    td:last-child {
      white-space: nowrap;
    }

    .signature-status {
      text-align: center;
    }

    p {
      font-size: 16px;
      margin: 0 0 3px 0;
    }

    dl {
      margin-top: 3px;
      display: flex;
      flex-direction: row;
      align-items: baseline;
    }

    dt {
      margin-right: 6px;
      font-size: 12px;
      font-weight: bold;
      color: $grey-1;
      text-transform: uppercase;
    }

    dd {
      font-size: 14px;
      margin-right: 12px;
      white-space: nowrap;
    }

    span {
      white-space: nowrap;
    }

    .creator {
      display: inline-block;
      width: 12px;
      height: 12px;
      background-color: $black;
      color: $white;
      font-size: 19px;
      line-height: 7px;
      font-weight: bold;
      border-radius: 50%;
      text-align: center;
      padding: 3px;
      vertical-align: text-top;
    }

    .status {
      background-color: $grey-2;
      color: $white;
      font-size: 14px;
      font-weight: bold;
      line-height: 14px;
      padding: 3px 6px;
      border-radius: 3px;
    }

    .status-validated {
      background-color: $success;
    }

    .status-fraudulent {
      background-color: $caution;
    }

    .status-invalidated {
      background-color: $danger;
    }
  }

  .tag-list, .topic-list {
    th, td {
      text-align: left;
    }

    th:last-child, td:last-child {
      text-align: right;
    }

    td:first-child {
      text-align: left;
    }
  }

  .domain-list, .rejection-reason-list, .template-list {
    th {
      padding: 8px 0;
    }

    td {
      padding: 8px 0;
      font-size: 14px;
      line-height: 20px;
    }

    th, td {
      &:last-child {
        text-align: right;
      }
    }

    code {
      vertical-align: 0px;
      padding: 3px 7px;
    }
  }

  code {
    background-color: $highlight-colour;
    border: 1px solid $border-colour;
    border-radius: 3px;
    color: $black;
    font-family: monospace;
    font-size: 14px;
    line-height: 20px;
    padding: 3px;
    vertical-align: 1px;
  }

  .notification-list {
    address {
      display: block;
      font-size: 18px;
      font-weight: bold;
      line-height: 1.25;

      a {
        text-decoration: underline;
      }
    }

    small {
      display: block;
      font-size: 14px;
      line-height: 1.25;
      color: $grey-1;
      margin-top: 3px;
    }

    time {
      display: block;
      font-size: 14px;
      line-height: 1.25;

      &.sending {
        color: $grey-1;
      }

      &.delivered {
        color: $black;
      }

      &.bounced, &.rejected, &.complained {
        color: $red;
      }
    }

    strong {
      color: $red;
    }

    td {
      padding: 12px;
      vertical-align: bottom;
    }

    th:last-child, td:last-child {
      text-align: right;
      padding-right: 0;
    }

    th:first-child, td:first-child {
      text-align: left;
      padding-left: 0;
    }
  }
}

